--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                       <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./assets/pages/nosotros.html">Nosotros</a>
+                      <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./assets/pages/catalogo.html">Catalogo</a>
+                      <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./assets/pages/sucursales.html">Sucursales</a>
+                      <a class="nav-link" href="./pages/sucursales.html">Sucursales</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./assets/pages/contacto.html">Contacto</a>
+                      <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                     </li>
                   </ul>
                   <form class="d-flex" role="search">
