--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                       <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                      <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
