--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img src="./assets/img/Logo.png"></a>
+                <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                      <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
@@ -49,16 +49,16 @@
           <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/assets/img/index.png" class="d-block w-100" alt="persona contenta con su tatuaje">
+                <img src="./assets/img/index.png" class="d-block w-100" alt="persona contenta con su tatuaje">
               </div>
               <div class="carousel-item">
-                <img src="/assets/img/index2.png" class="d-block w-100" alt="espalda tatuada">
+                <img src="./assets/img/index2.png" class="d-block w-100" alt="espalda tatuada">
               </div>
               <div class="carousel-item">
-                <img src="/assets/img/index3.png" class="d-block w-100" alt="cuello tatuado">
+                <img src="./assets/img/index3.png" class="d-block w-100" alt="cuello tatuado">
               </div>
               <div class="carousel-item">
-                <img src="/assets/img/index4.png" class="d-block w-100" alt="tatuador tatuando espalda">
+                <img src="./assets/img/index4.png" class="d-block w-100" alt="tatuador tatuando espalda">
               </div>
             </div>
           </div>    
