--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/img/index.png" class="d-block w-100" alt="persona contenta con su tatuaje">
+                <img src="assets/img/index.png" class="d-block w-100" alt="persona contenta con su tatuaje">
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/index2.png" class="d-block w-100" alt="espalda tatuada">
