--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <img src="assets/img/index.png" class="d-block w-100" alt="persona contenta con su tatuaje">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/index2.png" class="d-block w-100" alt="espalda tatuada">
+                <img src="assets/img/index2.png" class="d-block w-100" alt="espalda tatuada">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/index3.png" class="d-block w-100" alt="cuello tatuado">
+                <img src="assets/img/index3.png" class="d-block w-100" alt="cuello tatuado">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/index4.png" class="d-block w-100" alt="tatuador tatuando espalda">
+                <img src="assets/img/index4.png" class="d-block w-100" alt="tatuador tatuando espalda">
               </div>
             </div>
           </div>    
