--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -49,37 +49,25 @@
           <div class="container">
             <div class="row">
               <div class="card" style="width: 18rem;">
-                <img src="/assets/img/tatuaje1.png" class="card-img-top" alt="tatuaje realista">
+                <img src="assets/img/tatuaje1.png" class="card-img-top" alt="tatuaje realista">
                 <div class="card-body">
                   <p class="card-text">Contamos con experiencia en el rubro y profesionalismo para que lleves lo que necesites para lograr lo que querés.</p>
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="/assets/img/tatuaje2.png" class="card-img-top" alt="tatuaje caricaturesco">
+                <img src="assets/img/tatuaje2.png" class="card-img-top" alt="tatuaje caricaturesco">
                 <div class="card-body">
                   <p class="card-text">Nuestros insumos son de primera calidad y cumplen con las normas ISO 9009 y 9003.</p>
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="/assets/img/tatuaje3.png" class="card-img-top" alt="...">
+                <img src="assets/img/tatuaje3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">Cualquier consulta estamos para atenderte. No dudes en escribirnos!</p>
                 </div>
               </div>
             </div>
           </div>
-            <!--<div class="tattoo1">
-                <p>Contamos con experiencia en el rubro y profesionalismo para que lleves lo que necesites para lograr lo que querés.</p>
-                <img src="/assets/img/tatuaje1.png">
-            </div>
-            <div class="tattoo2">
-                <p>Nuestros insumos son de primera calidad y cumplen con las normas ISO 9009 y 9003.</p>
-                <img src="/assets/img/tatuaje2.png">
-            </div>        
-            <div class="tattoo3">
-                <p>Cualquier consulta estamos para atenderte. No dudes en escribirnos!</p>
-                <img src="/assets/img/tatuaje3.png">
-            </div>-->
         </main>   
         <footer>
             <p>Bismutho producciones 2025. Todos los derechos reservados.</p>
