--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,7 +21,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -47,12 +47,12 @@
         </header>
         <main class="nosotros">
             <div class="nosotros1">
-                <img src="/assets/img/nosotros1.png" alt="imagen de gente tatuando"></a>
+                <img src="assets/img/nosotros1.png" alt="imagen de gente tatuando"></a>
                 <p>Desde hace décadas contamos con el mejor equipo especializado en asesorarte y orientarte para que encuentres lo que necesitás.</p>
             </div>
             <br>
             <div class="nosotros2">
-                <img src="/assets/img/nosotros2.png" alt="imagen de gente tatuando" class="imgnos2"></a>        
+                <img src="assets/img/nosotros2.png" alt="imagen de gente tatuando" class="imgnos2"></a>        
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ea ipsum at architecto reprehenderit officiis dolor porro dolores repellendus tenetur?</p>
             </div>    
         </main>
