--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -14,14 +14,14 @@
         <header>
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><img src="/assets/img/Logo.png"></a>
+              <a class="navbar-brand" href="/index.html"><img src="./assets/img/Logo.png"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -47,7 +47,7 @@
         </header>
         <main class="sucursales">
             <div class="caballito" style="width: 18rem;">
-                <img src="/assets/img/caballito.png" class="card-img-top" alt="Sucursal Rivadavia">
+                <img src="assets/img/caballito.png" class="card-img-top" alt="Sucursal Rivadavia">
                 <div class="card-body">
                   <h5 class="card-title">Sucursal Caballito</h5>
                   <br>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="devoto" style="width: 18rem;">
-                <img src="/assets/img/devoto.png" class="card-img-top" alt="Sucursal Rivadavia">
+                <img src="assets/img/devoto.png" class="card-img-top" alt="Sucursal Rivadavia">
                 <div class="card-body">
                   <h5 class="card-title">Sucursal Devoto</h5>
                   <br>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="moron" style="width: 18rem;">
-                <img src="/assets/img/moron.png" class="card-img-top" alt="Sucursal Rivadavia">
+                <img src="assets/img/moron.png" class="card-img-top" alt="Sucursal Rivadavia">
                 <div class="card-body">
                   <h5 class="card-title">Sucursal Moron</h5>
                   <br>
