--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -14,7 +14,7 @@
         <header>
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><img src="/assets/img/Logo.png"></a>
+              <a class="navbar-brand" href="./index.html"><img src="./assets/img/Logo.png"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -49,19 +49,19 @@
           <div class="container">
             <div class="row">
               <div class="card" style="width: 18rem;">
-                <img src="assets/img/tatuaje1.png" class="card-img-top" alt="tatuaje realista">
+                <img src="./assets/img/tatuaje1.png" class="card-img-top" alt="tatuaje realista">
                 <div class="card-body">
                   <p class="card-text">Contamos con experiencia en el rubro y profesionalismo para que lleves lo que necesites para lograr lo que querés.</p>
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="assets/img/tatuaje2.png" class="card-img-top" alt="tatuaje caricaturesco">
+                <img src="./assets/img/tatuaje2.png" class="card-img-top" alt="tatuaje caricaturesco">
                 <div class="card-body">
                   <p class="card-text">Nuestros insumos son de primera calidad y cumplen con las normas ISO 9009 y 9003.</p>
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img src="assets/img/tatuaje3.png" class="card-img-top" alt="...">
+                <img src="./assets/img/tatuaje3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">Cualquier consulta estamos para atenderte. No dudes en escribirnos!</p>
                 </div>
