--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,7 +47,7 @@
         </header>
         <main class="nosotros">
             <div class="nosotros1">
-                <img src="assets/img/nosotros1.png" alt="imagen de gente tatuando"></a>
+                <img src="./img/nosotros1.png" alt="imagen de gente tatuando"></a>
                 <p>Desde hace décadas contamos con el mejor equipo especializado en asesorarte y orientarte para que encuentres lo que necesitás.</p>
             </div>
             <br>
