--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="../assets/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Monomakh&display=swap" rel="stylesheet">
@@ -14,14 +14,14 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/index.html"><img src="assets/img/Logo.png"></a>
+                  <a class="navbar-brand" href="index.html"><img src="../assets/img/Logo.png"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -47,12 +47,12 @@
         </header>
         <main class="nosotros">
             <div class="nosotros1">
-                <img src="./img/nosotros1.png" alt="imagen de gente tatuando"></a>
+                <img src="../assets/img/nosotros1.png" alt="imagen de gente tatuando"></a>
                 <p>Desde hace décadas contamos con el mejor equipo especializado en asesorarte y orientarte para que encuentres lo que necesitás.</p>
             </div>
             <br>
             <div class="nosotros2">
-                <img src="assets/img/nosotros2.png" alt="imagen de gente tatuando" class="imgnos2"></a>        
+                <img src="../assets/img/nosotros2.png" alt="imagen de gente tatuando" class="imgnos2"></a>        
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ea ipsum at architecto reprehenderit officiis dolor porro dolores repellendus tenetur?</p>
             </div>    
         </main>
