--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="../assets/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Monomakh&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <header>
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><img src="assets/img/Logo.png"></a>
+              <a class="navbar-brand" href="index.html"><img src="../assets/img/Logo.png"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -47,7 +47,7 @@
         </header>
         <main class="sucursales">
             <div class="caballito" style="width: 18rem;">
-                <img src="assets/img/caballito.png" class="card-img-top" alt="Sucursal Rivadavia">
+                <img src="../assets/img/caballito.png" class="card-img-top" alt="Sucursal Rivadavia">
                 <div class="card-body">
                   <h5 class="card-title">Sucursal Caballito</h5>
                   <br>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="devoto" style="width: 18rem;">
-                <img src="assets/img/devoto.png" class="card-img-top" alt="Sucursal Rivadavia">
+                <img src="../assets/img/devoto.png" class="card-img-top" alt="Sucursal Rivadavia">
                 <div class="card-body">
                   <h5 class="card-title">Sucursal Devoto</h5>
                   <br>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="moron" style="width: 18rem;">
-                <img src="assets/img/moron.png" class="card-img-top" alt="Sucursal Rivadavia">
+                <img src="../assets/img/moron.png" class="card-img-top" alt="Sucursal Rivadavia">
                 <div class="card-body">
                   <h5 class="card-title">Sucursal Moron</h5>
                   <br>
